--- a/package.json
+++ b/package.json
@@ -9,12 +9,38 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "19.0.0-rc-69d4b800-20241021",
-    "react-dom": "19.0.0-rc-69d4b800-20241021",
-    "next": "15.0.1"
+    "@clerk/nextjs": "^6.0.2",
+    "@google-cloud/text-to-speech": "^5.5.0",
+    "@google/generative-ai": "^0.21.0",
+    "@neondatabase/serverless": "^0.10.1",
+    "@radix-ui/react-alert-dialog": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-select": "^2.1.2",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@remotion/cli": "^4.0.226",
+    "assemblyai": "^4.7.1",
+    "axios": "^1.7.7",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "drizzle-orm": "^0.35.3",
+    "firebase": "^11.0.1",
+    "lucide-react": "^0.454.0",
+    "next": "15.0.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "remotion": "^4.0.226",
+    "replicate": "^1.0.1",
+    "sonner": "^1.5.0",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.0.2"
   },
   "devDependencies": {
+    "@types/react": "18.3.12",
+    "drizzle-kit": "^0.26.2",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "5.6.3"
   }
 }
